--- a/Projects/recruitment app/Rec_app.ipynb
+++ b/Projects/recruitment app/Rec_app.ipynb
@@ -846,6 +846,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = data.iloc[:,[1,5]].values\n",
+    "y = data.iloc[:,6].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# evaluate the model aby splititng into the tarin tests sets \n",
+    "X_train, X_test, y_train , y_test= train_test_split(X,y,test_size=0.3, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Mayank\\AppData\\Local\\Enthought\\Canopy\\edm\\envs\\User\\lib\\site-packages\\sklearn\\utils\\validation.py:429: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, _DataConversionWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "SC_X = StandardScaler()\n",
+    "X_train = SC_X.fit_transform(X_train)\n",
+    "X_test = SC_X.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=0, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model=LogisticRegression(random_state=0)\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 1 0 0 1 1 1 0 0 1 0 0 0 1 1 0 1 1 1 0 0 1 0 1 0 1 0 0 0 0 1 0 1 0 1\n",
+      " 1 0 1 0 0 1 0 1 1 1 1 1 0 1 1 0 0 0 1 0 0 0 1 1 1 1 0 0 1 0 1 0 1 1 0 0 1\n",
+      " 0 0 1 1 1 0 0 1 1 1 0 0 1 1 0 1 1 1 1 1 1 0 0 1 0 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.20783611  0.74729626  0.02510472  0.01976291]\n",
+      " [ 0.17018517  0.77544726  0.02094429  0.03342328]\n",
+      " [ 0.90656167  0.02896504  0.00661201  0.05786128]\n",
+      " [ 0.26843833  0.6907761   0.02958061  0.01120496]\n",
+      " [ 0.67838678  0.28469843  0.01709032  0.01982447]\n",
+      " [ 0.91407233  0.05223213  0.01129531  0.02240024]\n",
+      " [ 0.27713839  0.67837171  0.02274887  0.02174103]\n",
+      " [ 0.09299664  0.85599145  0.02631878  0.02469313]\n",
+      " [ 0.01713736  0.92595551  0.03831996  0.01858717]\n",
+      " [ 0.86699985  0.08399089  0.00973329  0.03927596]\n",
+      " [ 0.90535499  0.06856085  0.01731429  0.00876986]\n",
+      " [ 0.01658829  0.92639376  0.04221438  0.01480358]\n",
+      " [ 0.59453236  0.31856948  0.00995492  0.07694324]\n",
+      " [ 0.5891623   0.37678034  0.02646603  0.00759134]\n",
+      " [ 0.72316833  0.23537535  0.01436539  0.02709092]\n",
+      " [ 0.29814627  0.65807371  0.02259916  0.02118086]\n",
+      " [ 0.04685301  0.89673122  0.02719517  0.0292206 ]\n",
+      " [ 0.58449401  0.36527803  0.01457743  0.03565054]\n",
+      " [ 0.41819947  0.5078285   0.0130427   0.06092934]\n",
+      " [ 0.31268958  0.6434102   0.02207558  0.02182465]\n",
+      " [ 0.10222851  0.84747798  0.02619222  0.02410129]\n",
+      " [ 0.94486856  0.02872639  0.01222977  0.01417529]\n",
+      " [ 0.53665565  0.42316727  0.01869646  0.02148062]\n",
+      " [ 0.31836958  0.64169403  0.02653766  0.01339873]\n",
+      " [ 0.51241417  0.44665194  0.01885057  0.02208333]\n",
+      " [ 0.02096519  0.92185293  0.03376917  0.02341272]\n",
+      " [ 0.52030487  0.43967123  0.01915847  0.02086542]\n",
+      " [ 0.01218482  0.92895702  0.04289547  0.01596269]\n",
+      " [ 0.57701788  0.37497196  0.01520606  0.0328041 ]\n",
+      " [ 0.79583768  0.1625677   0.01281206  0.02878256]\n",
+      " [ 0.55860064  0.40495995  0.02075536  0.01568406]\n",
+      " [ 0.73916754  0.22788348  0.01798157  0.0149674 ]\n",
+      " [ 0.04411552  0.90405511  0.03317794  0.01865143]\n",
+      " [ 0.72046271  0.24704287  0.01917341  0.01332101]\n",
+      " [ 0.05206076  0.89690488  0.03227287  0.0187615 ]\n",
+      " [ 0.64276715  0.32138669  0.01868807  0.01715809]\n",
+      " [ 0.09903984  0.8532963   0.0382778   0.00938606]\n",
+      " [ 0.05177516  0.89262641  0.02706939  0.02852904]\n",
+      " [ 0.72406789  0.24453393  0.02475052  0.00664767]\n",
+      " [ 0.20783611  0.74729626  0.02510472  0.01976291]\n",
+      " [ 0.77633258  0.19223781  0.01802488  0.01340473]\n",
+      " [ 0.84897624  0.12097413  0.01607641  0.01397323]\n",
+      " [ 0.15174903  0.79760312  0.02326054  0.02738731]\n",
+      " [ 0.77721019  0.19030447  0.0170197   0.01546564]\n",
+      " [ 0.29050367  0.66778238  0.02488003  0.01683393]\n",
+      " [ 0.09612431  0.85677892  0.03562023  0.01147654]\n",
+      " [ 0.06134764  0.88838564  0.03139338  0.01887334]\n",
+      " [ 0.31286475  0.64113478  0.02085043  0.02515005]\n",
+      " [ 0.07208714  0.87723431  0.0288199   0.02185865]\n",
+      " [ 0.85268128  0.11942349  0.01977493  0.00812029]\n",
+      " [ 0.05043298  0.8985446   0.03980268  0.01121973]\n",
+      " [ 0.01136756  0.92934984  0.04144523  0.01783737]\n",
+      " [ 0.6289897   0.33369388  0.01809092  0.0192255 ]\n",
+      " [ 0.83686816  0.13124546  0.02877841  0.00310797]\n",
+      " [ 0.52719666  0.43512827  0.02059699  0.01707808]\n",
+      " [ 0.04685301  0.89673122  0.02719517  0.0292206 ]\n",
+      " [ 0.59949473  0.36164038  0.01794537  0.02091952]\n",
+      " [ 0.90656167  0.02896504  0.00661201  0.05786128]\n",
+      " [ 0.82280949  0.14561156  0.01600732  0.01557163]\n",
+      " [ 0.04131803  0.90704448  0.03593685  0.01570064]\n",
+      " [ 0.08475408  0.86756844  0.0352228   0.01245468]\n",
+      " [ 0.4302533   0.52763081  0.02010743  0.02200847]\n",
+      " [ 0.07221416  0.87896701  0.03234085  0.01647799]\n",
+      " [ 0.86549174  0.10362608  0.01471327  0.01616891]\n",
+      " [ 0.54109653  0.42325176  0.02247487  0.01317684]\n",
+      " [ 0.29050367  0.66778238  0.02488003  0.01683393]\n",
+      " [ 0.49303547  0.47018252  0.02284787  0.01393414]\n",
+      " [ 0.05177516  0.89262641  0.02706939  0.02852904]\n",
+      " [ 0.84387984  0.12789331  0.0214134   0.00681346]\n",
+      " [ 0.18078704  0.77371729  0.02583421  0.01966146]\n",
+      " [ 0.23632129  0.72203445  0.03048065  0.01116361]\n",
+      " [ 0.61019083  0.35575657  0.02193272  0.01211989]\n",
+      " [ 0.81442279  0.14874692  0.01374627  0.02308402]\n",
+      " [ 0.20787556  0.74563813  0.02371032  0.022776  ]\n",
+      " [ 0.84462837  0.08315167  0.00771487  0.06450509]\n",
+      " [ 0.54516131  0.40413622  0.01507346  0.03562901]\n",
+      " [ 0.03831304  0.90358536  0.02744874  0.03065286]\n",
+      " [ 0.03616814  0.91125873  0.03977149  0.01280164]\n",
+      " [ 0.06962165  0.87713701  0.02669441  0.02654693]\n",
+      " [ 0.58427612  0.38173044  0.02467999  0.00931345]\n",
+      " [ 0.83802347  0.12650807  0.01356147  0.021907  ]\n",
+      " [ 0.03156724  0.9149267   0.03506896  0.0184371 ]\n",
+      " [ 0.03159919  0.91525706  0.03713861  0.01600514]\n",
+      " [ 0.05177516  0.89262641  0.02706939  0.02852904]\n",
+      " [ 0.76673606  0.18991349  0.01300072  0.03034973]\n",
+      " [ 0.7281803   0.23766144  0.01739461  0.01676365]\n",
+      " [ 0.39424109  0.56776749  0.02634286  0.01164856]\n",
+      " [ 0.00806101  0.93046877  0.04382169  0.01764853]\n",
+      " [ 0.52030487  0.43967123  0.01915847  0.02086542]\n",
+      " [ 0.13486867  0.81693082  0.02580381  0.0223967 ]\n",
+      " [ 0.23455437  0.72236525  0.03587485  0.00720552]\n",
+      " [ 0.07216707  0.87830794  0.03053829  0.01898669]\n",
+      " [ 0.09903984  0.8532963   0.0382778   0.00938606]\n",
+      " [ 0.13486867  0.81693082  0.02580381  0.0223967 ]\n",
+      " [ 0.40471107  0.55562806  0.02267718  0.01698368]\n",
+      " [ 0.85258765  0.11675319  0.01543     0.01522916]\n",
+      " [ 0.53665565  0.42316727  0.01869646  0.02148062]\n",
+      " [ 0.11925448  0.83464201  0.03580096  0.01030255]\n",
+      " [ 0.58394652  0.37734183  0.01839029  0.02032135]\n",
+      " [ 0.9242319   0.0403411   0.01024756  0.02517945]\n",
+      " [ 0.14753023  0.80494914  0.02567018  0.02185045]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "probs = model.predict_proba(X_test)\n",
+    "print(probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  6.29426757e-89,   4.99999966e-01,   4.99999966e-01,\n",
+       "          6.79102070e-08]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict_proba(np.array([75,86]).reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
